(Fix) Header: Language menu z-index

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,7 +2,7 @@
 	// border-bottom: 1px solid rgba($color-white, 0.35);
 	margin-bottom: 20px;
 	position: relative;
-	z-index: 2;
+	z-index: 5;
 }
 
 #boids {
